--- a/www/styles/SIR_style.css
+++ b/www/styles/SIR_style.css
@@ -98,8 +98,9 @@ tr.affiliates td {
 	Footer
    --------------------------------- */
 
-td.footer {
-	padding:20px 5px 0 5px;
+.footer {
+	padding: 20px 5px 0 5px;
+	text-align: right;
 	}
 
 .footer ul.navbar {
