--- a/www/styles/SIR_style.css
+++ b/www/styles/SIR_style.css
@@ -91,6 +91,7 @@ ul.navbar li span {
 tr.affiliates td {
 	border-top: 4px solid black;
 	border-bottom: 4px solid black;
+	padding-top: 10px;
 }
 
    
