--- a/www/styles/SIR_style.scss
+++ b/www/styles/SIR_style.scss
@@ -28,13 +28,9 @@ tr.address-bar td {
 
 hr {display: none;}
 
-/* -------------------------------------------------------------------------
-	Navigation
-   ------------------------------------------------------------------------- */
+/* Navigation ------------------------------------------------------------------------- */
    
-/* ---------------------------------
-	Main
-   --------------------------------- */
+/* Main --------------------------------- */
 
 ul.navbar {
 	font-family: Arial Narrow, Arial, Helvetica, sans-serif;
@@ -104,9 +100,7 @@ tr.affiliates td {
 }
 
    
-/* ---------------------------------
-	Footer
-   --------------------------------- */
+/* Footer --------------------------------- */
 
 .footer ul.navbar {
 	position:relative;
@@ -208,35 +202,35 @@ h3 {
 	margin-bottom:0.5em;
 }
 
-.classname {
-	font-family: Arial;
-	color: #000000;
-	text-decoration: none;
-	font-size: 9pt;
-	font-weight: 400;
-	font-style: normal;
-}
-a.classname:link {
-	color: #000000;
-	text-decoration: none;
-	font-style: normal;
-}
-a.classname:visited {
-	font-family: Arial;
-	font-size: 9pt;
-	font-weight: 400;
-	color: #000000;
-	text-decoration: none;
-	font-style: normal;
-}
-a.classname:hover {
-	font-family: Arial;
-	font-size: 9pt;
-	font-weight: 400;
-	color: #990000;
-	text-decoration: none;
-	font-style: normal;
-}
+//.classname {
+//	font-family: Arial;
+//	color: #000000;
+//	text-decoration: none;
+//	font-size: 9pt;
+//	font-weight: 400;
+//	font-style: normal;
+//}
+//a.classname:link {
+//	color: #000000;
+//	text-decoration: none;
+//	font-style: normal;
+//}
+//a.classname:visited {
+//	font-family: Arial;
+//	font-size: 9pt;
+//	font-weight: 400;
+//	color: #000000;
+//	text-decoration: none;
+//	font-style: normal;
+//}
+//a.classname:hover {
+//	font-family: Arial;
+//	font-size: 9pt;
+//	font-weight: 400;
+//	color: #990000;
+//	text-decoration: none;
+//	font-style: normal;
+//}
 
 a,
 a:link,
@@ -244,6 +238,7 @@ a:visited {
 	color: #000000;
 	text-decoration: underline;
 	font-weight: normal;
+	white-space: nowrap;
 }
 
 a:hover {
@@ -340,40 +335,47 @@ ul.course-list li.course-payment span.options {width:245px;}
 img[align="left"] {margin-right: 10px;}
 img[align="right"] {margin-left: 10px;}
 
-blockquote.testimonial {
-    font-size:16px; 
-	line-height: 1.3em;
-    padding:18px 20px 10px 20px;
-    margin-left: 20px; 
-    margin-bottom:40px;
-    background:#f2f1f6;
-	position: relative;
-}	
+blockquote {
+	&.testimonial {
+		font-size: 16px; 
+		line-height: 1.3em;
+		padding: 18px 20px 10px 20px;
+		margin-left: 20px; 
+		margin-bottom: 40px;
+		background: #f2f1f6;
+		position: relative;
 
-blockquote.testimonial p {margin: 0 0 1em 1em;}
+		p {
+			margin: 0 0 1em 1em;
+			
+			&:before {
+				display: block;
+				position: absolute;
+				left: 0.5em;
+			}
 
-blockquote.testimonial p:before {
-	display: block;
-	position: absolute;
-	left: 0.5em;
+			&:before,
+			&:after {
+				color: #c73401;
+				font-size: 30px;
+				line-height: 0.5em;
+				margin-right: 0.27em;
+				content: "\201c";
+			}
+
+			&:after {
+				display: inline-block;
+				content: "\201d";
+				vertical-align: bottom;
+			}
+		}
+
+		
+		
+		
+		em {
+			font-size: 14px;
+			margin-left: 1em;
+		}
+	}	
 }
-
-blockquote.testimonial p:before,
-blockquote.testimonial p:after {
-    color: #c73401;
-    font-size: 30px;
-    line-height: 0.5em;
-    margin-right: 0.27em;
-    content: "\201c";
-}
-
-blockquote.testimonial p:after {
-    display: inline-block;
-	content: "\201d";
-	vertical-align: bottom;
-}
-
-blockquote.testimonial em {
-	font-size: 14px;
-	margin-left: 1em;
-	}
