Fix Layout Issues
Fixed left panel width issue not aligning with logo. Fixed nav item text wrapping.

--- a/www/styles/SIR_style.css
+++ b/www/styles/SIR_style.css
@@ -8,7 +8,8 @@
   .main-content .logo,
   .main-content .navigation {
     flex: 0 0 200px;
-    margin-right: 6px; }
+    margin-right: 6px;
+    width: 200px; }
   .main-content .logo {
     padding: 10px;
     background-color: #FFFFFF; }
@@ -17,7 +18,7 @@
     .main-content .banner .tagline {
       padding: 10px; }
   .main-content .page-contact-info {
-    justify: space-around;
+    justify-content: center;
     background-color: #FFAA19;
     font-weight: bold; }
     .main-content .page-contact-info a {
@@ -51,7 +52,6 @@
 .page-contact-info {
   flex: 0 0 auto;
   padding: 4px;
-  background: lightblue;
   margin: 4px 0; }
   .page-contact-info > * {
     position: relative;
@@ -75,9 +75,10 @@
   .page-footer a {
     text-decoration: none; }
   .page-footer .affiliates {
-    justify-content: space-around; }
+    justify-content: center; }
     .page-footer .affiliates .affiliate-logo {
-      flex: 0 0 150px; }
+      flex: 0 0 150px;
+      text-align: center; }
   .page-footer .return-to-top {
     margin-top: 10px; }
 
@@ -142,7 +143,8 @@ ul.navbar li ul li a {
   padding-left: 1.5em;
   font-size: 12px;
   text-transform: none;
-  background: url("../images/dot-yellow.gif") 8px 9px no-repeat; }
+  background: url("../images/dot-yellow.gif") 8px 9px no-repeat;
+  white-space: normal; }
 
 ul.navbar li ul li a:hover {
   background-image: url("../images/dot-red.gif"); }
